src/test/ui/parser/issue-32501.stderr
error: `mut` must be followed by a named binding
  --> $DIR/issue-32501.rs:7:9
   |
LL |     let mut _ = 0;
   |         ^^^^^ help: remove the `mut` prefix: `_`
   |
   = note: `mut` may be followed by `variable` and `variable @ pattern`

error: aborting due to previous error

